Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Covered_Asset__c.field-meta.xml
<CustomField>
    <fullName>Covered_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>create field for LST FSR product link</description>
    <label>Covered Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>