Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/EVAL_SAMPLE__c.field-meta.xml
<CustomField>
    <fullName>EVAL_SAMPLE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EVAL SAMPLE</label>
    <type>Checkbox</type>
</CustomField>