Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Falls_in_NPI_date_range__c.field-meta.xml
<CustomField>
    <fullName>Falls_in_NPI_date_range__c</fullName>
    <formula>AND( (CreatedDate &gt;  PricebookEntry.Product2.NPI_Start_Date__c ),(CreatedDate &lt;  PricebookEntry.Product2.NPI_End_Date__c ))</formula>
    <label>Falls in NPI date range</label>
    <type>Checkbox</type>
</CustomField>