Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/FSE_Trunk__c.field-meta.xml
<CustomField>
    <fullName>FSE_Trunk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CALP parts information</description>
    <label>FSE Trunk</label>
    <type>Checkbox</type>
</CustomField>