Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/fxOpp_Account_Global_Region__c.field-meta.xml
<CustomField>
    <fullName>fxOpp_Account_Global_Region__c</fullName>
    <formula>Opportunity.Account.PKI_Global_Region__c</formula>
    <label>Global Region</label>
    <type>Text</type>
</CustomField>