Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/fxOpportunity_CloseDate__c.field-meta.xml
<CustomField>
    <fullName>fxOpportunity_CloseDate__c</fullName>
    <formula>Opportunity.CloseDate</formula>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>