Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/fxOpportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>fxOpportunity_Name__c</fullName>
    <formula>Opportunity.Name</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>