Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/fxOpportunity_Rev_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>fxOpportunity_Rev_Rec_Date__c</fullName>
    <formula>Opportunity.Revenue_Rec_Date__c</formula>
    <label>Rev Rec Date</label>
    <type>Date</type>
</CustomField>