Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/fxOpportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>fxOpportunity_Stage__c</fullName>
    <formula>TEXT(Opportunity.StageName)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>