Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/fxSIOPmodel__c.field-meta.xml
<CustomField>
    <fullName>fxSIOPmodel__c</fullName>
    <description>This formula will get the SIOP model from the product. It will be used to link to a SIOP Model actual  number</description>
    <formula>PricebookEntry.Product2.SIOPModelMaster__c</formula>
    <label>fxSIOPmodel</label>
    <type>Text</type>
</CustomField>