Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/GBL_RevRecCompare__c.field-meta.xml
<CustomField>
    <fullName>GBL_RevRecCompare__c</fullName>
    <description>Compare Product date and Revenue recognization date</description>
    <formula>IF(ServiceDate = Opportunity_Revenue_Rec_Date__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSameAsRevRecDate?</label>
    <type>Checkbox</type>
</CustomField>