Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/IGOR_PAC__c.field-meta.xml
<CustomField>
    <fullName>IGOR_PAC__c</fullName>
    <formula>PricebookEntry.Product2.IGOR_PAC__c</formula>
    <label>IGOR_PAC</label>
    <type>Text</type>
</CustomField>