Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Is_DAS_Products__c.field-meta.xml
<CustomField>
    <fullName>Is_DAS_Products__c</fullName>
    <formula>OR ( 
Product_Line__c = &quot;APS&quot;, Product_Line__c = &quot;ARS&quot;, Product_Line__c = &quot;AWS&quot;, Product_Line__c = &quot;CLH&quot;, Product_Line__c = &quot;CLR&quot;, Product_Line__c = &quot;DIS&quot;, Product_Line__c = &quot;FAP&quot;, Product_Line__c = &quot;HCS&quot;, Product_Line__c = &quot;HTS&quot;, Product_Line__c = &quot;IAS&quot;, Product_Line__c = &quot;INV&quot;, Product_Line__c = &quot;LVI&quot;, Product_Line__c = &quot;MFT&quot;, Product_Line__c = &quot;MLD&quot;, Product_Line__c = &quot;MOL&quot;, Product_Line__c = &quot;MOX&quot;, Product_Line__c = &quot;NMO&quot;, Product_Line__c = &quot;NVS&quot;, Product_Line__c = &quot;PBR&quot;, Product_Line__c = &quot;PGI&quot;, Product_Line__c = &quot;QTS&quot;, Product_Line__c = &quot;RRD&quot;, Product_Line__c = &quot;RRS&quot;, Product_Line__c = &quot;SPS&quot;, Product_Line__c = &quot;TBR&quot;, Product_Line__c = &quot;TIS&quot;, Product_Line__c = &quot;TSC&quot;, Product_Line__c = &quot;EZR&quot;, Product_Line__c = &quot;AA&quot;, Product_Line__c = &quot;ICP&quot;, Product_Line__c = &quot;MAS&quot;, Product_Line__c = &quot;GC&quot;, Product_Line__c = &quot;LC&quot;, Product_Line__c = &quot;LCM&quot;, Product_Line__c = &quot;IR&quot;, Product_Line__c = &quot;UVS&quot;, Product_Line__c = &quot;TEA&quot;, Product_Line__c = &quot;MMS&quot;, Product_Line__c = &quot;MBA&quot;, Product_Line__c = &quot;RAM&quot;, Product_Line__c = &quot;PER&quot;, Product_Line__c = &quot;AMP&quot;, Product_Line__c = &quot;DAB&quot;, Product_Line__c = &quot;DAO&quot;, Product_Line__c = &quot;DLP&quot;, Product_Line__c = &quot;EXT&quot;, Product_Line__c = &quot;FNP&quot;, Product_Line__c = &quot;GMP&quot;, Product_Line__c = &quot;IMF&quot;, Product_Line__c = &quot;IMG&quot;, Product_Line__c = &quot;LMP&quot;, Product_Line__c = &quot;RVA&quot;, Product_Line__c = &quot;SKC&quot;, Product_Line__c = &quot;TXV&quot;,  Product_Line__c = &quot;AM&quot;, Product_Line__c = &quot;LM&quot;, Product_Family__c=&quot;72-PER&quot;,Product_Line__c = &quot;DL&quot;,Product_Line__c =&quot;FN&quot;,Product_Line__c =&quot;FTF&quot;,Product_Line__c =&quot;GM&quot;,Product_Line__c =&quot;PIV&quot;,Product_Line__c =&quot;DCS&quot;,Product_Line__c =&quot;DLS&quot;,Product_Line__c =&quot;DSS&quot;,Product_Line__c =&quot;DEL&quot;,Product_Family__c==&quot;75-QPS&quot;,Product_Line__c=&quot;QPS&quot;,Product_Line__c=&quot;HCA&quot;,Product_Line__c =&quot;NEO&quot;,Product_Line__c =&quot;PRE&quot;,Product_Line__c =&quot;NPT&quot;,Product_Line__c =&quot;DIA&quot;,Product_Line__c =&quot;CHS&quot;,Product_Line__c =&quot;VIR&quot;,Product_Line__c =&quot;CCM&quot;,Product_Line__c =&quot;MSD&quot;,Product_Line__c =&quot;MDX&quot;,Product_Line__c =&quot;NAP&quot;,Product_Line__c =&quot;RHS&quot;,Product_Line__c =&quot;NEX&quot;,Product_Line__c =&quot;SDX&quot;,Product_Line__c =&quot;BIO&quot;,Product_Line__c =&quot;EIM&quot;,Product_Line__c =&quot;SSS&quot;,Product_Line__c =&quot;ADS&quot;,Product_Line__c =&quot;LCA&quot;,Product_Line__c =&quot;MZG&quot;,Product_Line__c =&quot;PCK&quot;,Product_Line__c =&quot;HMG&quot;
,Product_Line__c =&quot;HHS&quot;,Product_Line__c =&quot;IDX&quot;,Product_Line__c =&quot;NXM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is DAS Products?</label>
    <type>Checkbox</type>
</CustomField>