Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Legacy_OppProductID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OppProductID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy OppProductID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>