Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Opp_line_item_id_old__c.field-meta.xml
<CustomField>
    <fullName>Opp_line_item_id_old__c</fullName>
    <description>Field to store the Salesforce ID of the Opp line item that was deleted as part of the removing Product duplicates. 
Product de duplication project 
Exp Date : 31-12-2015</description>
    <label>Opp line item id - old</label>
    <length>20</length>
    <type>Text</type>
</CustomField>