Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Revenue_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Revenue_Rec_Date__c</fullName>
    <description>REMOVE THIS FIELD - AFTER FORECAST SETTINGS PRODUCTION DEPLOYMENT</description>
    <formula>Opportunity.Revenue_Rec_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Revenue Rec Date</label>
    <type>Date</type>
</CustomField>