Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Family )</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>