Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>PricebookEntry.Product2.product_line__c</formula>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>