Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Product_Name_INF__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_INF__c</fullName>
    <description>Text field populated with product name by the workflow rule</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>