Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Status__c</fullName>
    <formula>IF( PricebookEntry.Product2.IsActive=TRUE, &quot;ACTIVE&quot;, &quot;INACTIVE&quot;)</formula>
    <label>Product Status</label>
    <type>Text</type>
</CustomField>