Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/PromotionCode__c.field-meta.xml
<CustomField>
    <fullName>PromotionCode__c</fullName>
    <label>PromotionCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>