Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Region_Product_Line_Target__c.field-meta.xml
<CustomField>
    <fullName>Region_Product_Line_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region Product Line Target</label>
    <referenceTo>Region_Product_Line_Target__c</referenceTo>
    <relationshipLabel>Opportunity Product (Region Product Line Target)</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>