Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Region_Product_Line_Target_Leads__c.field-meta.xml
<CustomField>
    <fullName>Region_Product_Line_Target_Leads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region Product Line Target (Leads)</label>
    <referenceTo>Region_Product_Line_Target_Leads__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>