Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Rep_Product_Line_Target__c.field-meta.xml
<CustomField>
    <fullName>Rep_Product_Line_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Product Line Target</label>
    <referenceTo>Rep_Product_Line_Target__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>