Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Service_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Product__c</fullName>
    <label>Service Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ATT Attivio</fullName>
            </value>
            <value>
                <fullName>AVC Analytics - Clinical</fullName>
            </value>
            <value>
                <fullName>AVS Analytics - R&amp;D</fullName>
            </value>
            <value>
                <fullName>DSK Desktop</fullName>
            </value>
            <value>
                <fullName>ELM Elements</fullName>
            </value>
            <value>
                <fullName>ENT Enterprise R&amp;D</fullName>
            </value>
            <value>
                <fullName>ISS Imaging</fullName>
            </value>
            <value>
                <fullName>QAS QA/QC</fullName>
            </value>
            <value>
                <fullName>SIG Signals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>