Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/SIOPModelMaster__c.field-meta.xml
<CustomField>
    <fullName>SIOPModelMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the link to the SIOP Model Master based on the formulated lookup of the Product Siop Model</description>
    <label>SIOP Model Master</label>
    <referenceTo>SIOP_Model_Master__c</referenceTo>
    <relationshipLabel>Opportunity Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>