Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>8</length>
    <type>Text</type>
</CustomField>