Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Start_Date_INF__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_INF__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>