Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Top200__c.field-meta.xml
<CustomField>
    <fullName>Top200__c</fullName>
    <formula>PricebookEntry.Product2.Top200__c</formula>
    <label>Top200</label>
    <type>Text</type>
</CustomField>