Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/fields/Type_INF__c.field-meta.xml
<CustomField>
    <fullName>Type_INF__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>