Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/validationRules/INF_ProdStDt_lessThan_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>INF_ProdStDt_lessThan_EndDate</fullName>
    <active>true</active>
    <description>End Date should not be greated than Start date</description>
    <errorConditionFormula>AND(End_Date_INF__c  &lt;   Start_Date_INF__c, Product2.Business_Unit__c == &#39;INF&#39; )</errorConditionFormula>
    <errorDisplayField>Start_Date_INF__c</errorDisplayField>
    <errorMessage>V.RULE_OPP_PRODUCT_001:  End Date must not be lesser than Start Date</errorMessage>
</ValidationRule>