Perkin-UAT/force-app/main/default/objects/OpportunityLineItem/validationRules/INF_Start_date_Mandatory_for_Perpetual.validationRule-meta.xml
<ValidationRule>
    <fullName>INF_Start_date_Mandatory_for_Perpetual</fullName>
    <active>false</active>
    <description>Start date is mandatory for perpetual licenses</description>
    <errorConditionFormula>AND(
ISBLANK(Start_Date_INF__c),
CONTAINS(PricebookEntry.Product2.Name,&#39;Perpetual&#39;),
Product2.Business_Unit__c == &#39;INF&#39; 
)</errorConditionFormula>
    <errorMessage>V.RULE_OPP_PRODUCT_003: Enter Start Date for perpetual products</errorMessage>
</ValidationRule>